--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ reqwest = "0.11.13"
 serde = { version="1.0.151", features = ["derive"] }
 serde_json = "1.0.91"
 tokio = { version="1.23.0", features = ["full"] }
+ttlhashmap = "0.1.0"
